Switched to MyCoRe 2024.06 and fixed deprecated calls